--- a/accounts/templates/function_orders_detail.html
+++ b/accounts/templates/function_orders_detail.html
@@ -99,7 +99,7 @@
                 <td><input type="text" name="product_name" value="{{ order.product.name }}" readonly/></td>
                 <td><input type="text" name="quantity" value="{{ order.quantity }}" autofocus/></td>
                 <td><input type="text" name="bulk_price" value="{{ order.product.Bulk_price }}" readonly/></td>
-                <td><input type="text" name="total_price" value="{{ order.total_price }}" /></td>
+                <td><input type="text" name="total_price" value="{{ order.function_total_price }}" /></td>
                 <td>
                     <div class="btn-group" role="group">
                         <button type="submit" class="btn btn-warning btn-sm" autofocus>save</button>
@@ -114,7 +114,7 @@
                     <td>{{ order.product.name }}</td>
                     <td>{{ order.quantity }}</td>
                     <td>{{ order.product.Bulk_price }}</td>
-                    <td>{{ order.total_price }}</td>
+                    <td>{{ order.function_total_price }}</td>
                     <td>
                         <div class="btn-group" role="group">
                             <a href="/orders/function/detail/{{Orders.id}}/?item_id={{order.id}}" class="btn btn-warning btn-sm">Edit</a>
