--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -91,10 +91,10 @@
                         <a class="nav-link" href="{% url 'journal_list' %}">Journal Note Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'function_debt_customer_list' %}">Function Due Customer</a>
+                        <a class="nav-link" href="{% url 'function_debt_customer_list' %}?is_function=True">Function Due Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'daily_debt_customer_list' %}">Daily Due Customer</a>
+                        <a class="nav-link" href="{% url 'daily_debt_customer_list' %}?is_function=False">Daily Due Customer</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
