--- a/accounts/templates/orders_ordersitems.html
+++ b/accounts/templates/orders_ordersitems.html
@@ -6,7 +6,7 @@
     <title>Orders {{ Orders.name }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-                body{
+            body{
             text-transform: uppercase;
             font-size: 22px;
         }
@@ -20,7 +20,17 @@
             z-index: 1000;
             width: calc(100% - 30px);
             display: none; /* Initially hidden */
+            max-height: 200px; /* Set a maximum height */
+            overflow-y: auto; /* Enable scrolling */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow */
         }
+        .billing-table {
+            max-height: 170px; /* Set a maximum height for the table */
+            overflow-y: auto; /* Enable scrolling for the table */
+            display: block; /* Make the table block-level */
+            position: relative; /* Needed for sticky positioning */
+        }
+
 
         .product-item {
             padding: 10px;
@@ -38,12 +48,27 @@
             text-align: center;
             color: #777;
         }
+        .thead-light {
+            position: sticky;
+            top: 0; /* Position from the top of the scrollable container */
+            background-color: #f8f9fa; /* Background color for better visibility */
+            z-index: 10; /* Ensure the header stays on top of the content */
+        }
+
+        .table th, .table td {
+            padding: 5px; /* Reduced padding for smaller gaps */
+        }
+
+        .mt-3 {
+            margin-top: 1rem; /* Adjust if needed */
+        }
     </style>
 </head>
 <body class="container">
-    <a href="{% url 'change_order_name' Orders.id %}"><h1 class="mt-4">Name: {{ Orders.name }}</h1></a>
-    <a href="{% url 'orders_list' %}" class="btn btn-secondary mt-3">Back to Orders</a>
-
+    <div class="d-flex justify-content-between align-items-center mt-4">
+        <a href="{% url 'change_order_name' Orders.id %}"><h1 class="mt-4">Name: {{ Orders.name }}</h1></a>
+        <a href="{% url 'orders_list' %}" class="btn btn-secondary mt-3">Back to Orders</a>
+    </div>
     <table class="table table-bordered billing-table mt-3">
         <thead class="thead-light">
             <tr>
@@ -178,13 +203,13 @@
             alert("That's not a valid integer!");
         }
     };
-        let selectedIndex = -1;
         function appendURL(obj,obj1){
             url1=document.getElementById("button").href;
             if(obj.value!='')
             url1 = url1.replace(obj1,obj.value);
             document.getElementById("button").href=url1;
         }
+        let selectedIndex = -1;
         function searchProducts(event) {
             const input = document.getElementById('productSearch').value.toLowerCase();
             const productList = document.getElementById('productList');
