fourth time changes

--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -101,7 +101,7 @@
                         <a class="nav-link" href="{% url 'daily_debt_customer_list' %}?is_function=False">Daily Due Customer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'flat_debt_customer_list' %}">Flats Due Customer</a>
+                        <a class="nav-link" href="{% url 'flat_debt_customer_list' %}">Flats Rents</a>
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
