--- a/accounts/templates/flat_debt_customers_list.html
+++ b/accounts/templates/flat_debt_customers_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Flats Customers Entries</h1>
+        <h1 class="text-center mb-4">Flats Rents Entries</h1>
 
         <!-- Filter Form -->
         <form method="GET" class="mb-4">
@@ -31,8 +31,8 @@
                 <thead class="thead-light">
                     <tr>
                         <th>S.No</th>
-                        <th>Customer Name</th>
-                        <th>Due Amount</th>
+                        <th>Name</th>
+                        <th>Amount</th>
                         <th>Date</th>
                         <th>Actions</th>
                     </tr>
