--- a/accounts/templates/function_orders_detail.html
+++ b/accounts/templates/function_orders_detail.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 {% block content %}
 <head>
     <meta charset="UTF-8">
@@ -33,7 +32,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow */
         }
         .billing-table {
-            max-height: 250px; /* Set a maximum height for the table */
+            max-height: 350px; /* Set a maximum height for the table */
             overflow-y: auto; /* Enable scrolling for the table */
             display: block; /* Make the table block-level */
             position: relative; /* Needed for sticky positioning */
@@ -62,14 +61,16 @@
             top: 0; /* Position from the top of the scrollable container */
             background-color: #f8f9fa; /* Background color for better visibility */
             z-index: 10; /* Ensure the header stays on top of the content */
+            font-size: 25px;
         }
         .table th, .table td,td {
-            padding: 5px; /* Reduced padding for smaller gaps */
+            padding: 10px; /* Reduced padding for smaller gaps */
         }
 
         
         .mt-3 {
             margin-top: 1rem; /* Adjust if needed */
+            font-size: 18px;
         }
 
     </style>
