--- a/accounts/templates/orders_detail.html
+++ b/accounts/templates/orders_detail.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 {% block content %}
 <head>
     <meta charset="UTF-8">
@@ -31,7 +30,7 @@
         }
 
         .billing-table {
-            max-height: 250px; /* Set a maximum height for the table */
+            max-height: 350px; /* Set a maximum height for the table */
             overflow-y: auto; /* Enable scrolling for the table */
             display: block; /* Make the table block-level */
             position: relative; /* Needed for sticky positioning */
@@ -59,6 +58,8 @@
             top: 0; /* Position from the top of the scrollable container */
             background-color: #f8f9fa; /* Background color for better visibility */
             z-index: 10; /* Ensure the header stays on top of the content */
+            font-size: 25px;
+
         }
 
         .table th, .table td {
@@ -67,6 +68,8 @@
 
         .mt-3 {
             margin-top: 1rem; /* Adjust if needed */
+            font-size: 18px;
+
         }
     </style>
 </head>
